<resources>
    <string name="app_name">Break Free</string>
    <string name="pref_freedom_date_title">Your Freedom Date</string>
    <string name="action_settings">Settings</string>
    <string name="action_drop_time">Drop Time</string>
    <string name="dialog_btn_positive">Yes</string>
    <string name="dialog_btn_negative">No</string>
    <string name="confirm_drop_title">Confirm</string>
    <string name="confirm_drop_message">Are you sure you want to drop Freedom Time?</string>
    <string name="start_set_freedom_day">Set Freedom Day</string>
    <string name="start_set_freedom_time">And Freedom Time</string>
    <string name="btn_continue">Continue</string>
    <string name="fish_date_time">Thursday, 26 July 2017 18:30</string>
    <string name="countdown_activity_title">Freedom Countdown</string>

    <string name="label_left_year" translatable="false">year</string>
    <string name="label_left_months" translatable="false">months</string>
    <string name="label_left_days" translatable="false">days</string>
    <string name="label_left_hours" translatable="false">hours</string>
    <string name="label_left_minutes" translatable="false">minutes</string>
    <string name="label_left_seconds" translatable="false">seconds</string>
    <string name="time_delimiter" translatable="false">:</string>

    <string name="pref_freedom_date_key" translatable="false">pref_freedom_date</string>
    <string name="pref_cnt_started_date_key" translatable="false">pref_cnt_started_date_key</string>
    <string name="date_warning_title">Warning</string>
    <string name="date_warning_msg">Please pick a date in the future before proceed.</string>
    <string name="pref_celebrate_shown" translatable="false">pref_celebrate_shown</string>
    <string name="feel_today_text_hint">Tell your mood right now</string>
    <string name="future_plans_text_hint">What will you do when free</string>
    <string name="btn_save_feel_today">Save</string>
    <string name="action_see_stories">See Stories</string>
    <string name="activity_my_stories">My Stories</string>
    <string name="fish_big" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu metus at erat blandit iaculis. Duis porta lacus sit amet ligula tincidunt, ac auctor metus tincidunt. Sed a nisl pharetra, cursus dolor et, egestas leo.</string>
    <string name="fish_date_time_long">Tue, 12 Sept 2017, 12:35 PM</string>

    <string name="share_title">Share</string>

    <string-array name="mood_texts">
        <item>So bad</item>
        <item>Unhappy</item>
        <item>Fine</item>
        <item>Cool</item>
        <item>So happy</item>
    </string-array>

    <integer name="story_item_max_lines">2</integer>
    <string name="share_feel_today_macro">On %s \n Mood: %s \n %s \n from Break Free ©</string>
    <string name="share_future_plan_macro">On %s \n When free I\'m gonna: \n %s \n from Break Free ©</string>
    <string name="story_saved_confirmed">Story saved.</string>
    <string name="action_share_story">Share</string>
    <string name="action_about">About</string>
    <string name="my_email_link" translatable="false">yahor.fralou@gmail.com</string>
    <string name="encourage_donate">Feel free to Donate if you like :)</string>
    <string name="celebrate">Celebrate</string>
    <string name="btn_repeat_celebration">Repeat Celebration</string>
    <string name="free_now_txt">You Are Free Now!</string>
    <string name="achiev_elapsed">You waited %s</string>
    <string name="tag_fancy_icon" translatable="false">tag_fancy_icon</string>
    <string name="notif_title_app_name">Break Free</string>
    <string name="notif_freedom_soon_msg">Your freedom coming at %s</string>

    <integer name="sound_time_1812">5000</integer>
    <integer name="punch_time_1812">7000</integer>
    <integer name="track_duration_1812">35000</integer>
</resources>
