<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_margin_h"
    android:paddingEnd="@dimen/activity_margin_h"
    android:paddingStart="@dimen/activity_margin_h"
    android:paddingTop="@dimen/activity_margin_h"
    tools:context="by.offvanhooijdonk.tofreedom.ui.AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fish_big"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_v"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_email_24"
            android:tint="@color/md_red_500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin_h"
            android:text="@string/my_email_link"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_v"
        android:text="@string/encourage_donate"
        android:textColor="@color/md_indigo_500"
        android:textSize="16sp" />
</LinearLayout>
