<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="by.offvanhooijdonk.tofreedom.ui.StartActivity">


    <LinearLayout
        android:id="@+id/blockText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin_v"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/txtPickedTime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/start_chain_size"
            android:layout_height="@dimen/start_chain_size"
            android:layout_marginBottom="@dimen/logo_bottom_margin"
            android:src="@drawable/ic_broken_chain"
            android:tint="@color/md_white_1000" />

        <TextView
            android:id="@+id/txtSetFreedomDate"
            style="@style/StartText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_set_freedom_day" />

        <TextView
            android:id="@+id/txtSetFreedomTime"
            style="@style/StartText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/start_text_margin_v"
            android:text="@string/start_set_freedom_time" />
    </LinearLayout>

    <Button
        android:id="@+id/btnContinue"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        android:text="@string/btn_continue"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/txtPickedTime"
        style="@style/StartPickedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fish_date_time"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
