<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/blockCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/blockYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <com.bydavy.morpher.DigitalClockView
                android:id="@+id/txtYears"
                style="@style/CountdownYearNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

            <TextView
                android:id="@+id/txtLabelYear"
                style="@style/CountdownYearText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_left_year" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/blockMonthDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <com.bydavy.morpher.DigitalClockView
                android:id="@+id/txtMonths"
                style="@style/CountdownMonthDayNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtLabelMonth"
                style="@style/CountdownMonthDayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_left_months" />

            <com.bydavy.morpher.DigitalClockView
                android:id="@+id/txtDays"
                style="@style/CountdownMonthDayNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtLabelDay"
                style="@style/CountdownMonthDayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_left_days" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/blockTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.bydavy.morpher.DigitalClockView
                android:id="@+id/txtTime"
                style="@style/CountdownTimeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
